Add placeholder sfx from file playback

--- a/TAC-COM.csproj
+++ b/TAC-COM.csproj
@@ -10,6 +10,28 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Static\SFX\GateClose\gate_close_1.mp3" />
+    <None Remove="Static\SFX\GateClose\gate_close_2.wav" />
+    <None Remove="Static\SFX\GateOpen\gate_open_1.wav" />
+    <None Remove="Static\SFX\GateOpen\gate_open_2.wav" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="Static\SFX\GateClose\gate_close_1.mp3">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Static\SFX\GateClose\gate_close_2.wav">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Static\SFX\GateOpen\gate_open_1.wav">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Static\SFX\GateOpen\gate_open_2.wav">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="CSCore" Version="1.2.1.2" />
   </ItemGroup>
 
