--- a/TAC-COM.csproj
+++ b/TAC-COM.csproj
@@ -11,13 +11,14 @@
 
   <ItemGroup>
     <None Remove="Static\SFX\GateClose\gate_close_1.mp3" />
+    <None Remove="Static\SFX\GateClose\gate_close_1.wav" />
     <None Remove="Static\SFX\GateClose\gate_close_2.wav" />
     <None Remove="Static\SFX\GateOpen\gate_open_1.wav" />
     <None Remove="Static\SFX\GateOpen\gate_open_2.wav" />
   </ItemGroup>
 
   <ItemGroup>
-    <Content Include="Static\SFX\GateClose\gate_close_1.mp3">
+    <Content Include="Static\SFX\GateClose\gate_close_1.wav">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Static\SFX\GateClose\gate_close_2.wav">
