--- a/TAC-COM.csproj
+++ b/TAC-COM.csproj
@@ -15,6 +15,7 @@
     <None Remove="Static\SFX\GateClose\gate_close_2.wav" />
     <None Remove="Static\SFX\GateOpen\gate_open_1.wav" />
     <None Remove="Static\SFX\GateOpen\gate_open_2.wav" />
+    <None Remove="Static\SFX\Noise\Noise_GMS.wav" />
   </ItemGroup>
 
   <ItemGroup>
@@ -28,6 +29,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Static\SFX\GateOpen\gate_open_2.wav">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Static\SFX\Noise\Noise_GMS.wav">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
