--- a/TAC-COM.csproj
+++ b/TAC-COM.csproj
@@ -11,8 +11,16 @@
 
   <ItemGroup>
     <None Remove="Static\SFX\GateClose\GateCloseGMS.wav" />
+    <None Remove="Static\SFX\GateClose\GateCloseHA.wav" />
+    <None Remove="Static\SFX\GateClose\GateCloseHORUS.wav" />
+    <None Remove="Static\SFX\GateClose\GateCloseIPSN.wav" />
+    <None Remove="Static\SFX\GateClose\GateCloseSSC.wav" />
     <None Remove="Static\SFX\GateClose\gate_close_1.mp3" />
     <None Remove="Static\SFX\GateOpen\GateOpenGMS.wav" />
+    <None Remove="Static\SFX\GateOpen\GateOpenHA.wav" />
+    <None Remove="Static\SFX\GateOpen\GateOpenHORUS.wav" />
+    <None Remove="Static\SFX\GateOpen\GateOpenIPSN.wav" />
+    <None Remove="Static\SFX\GateOpen\GateOpenSSC.wav" />
     <None Remove="Static\SFX\Noise\NoiseGMS.wav" />
     <None Remove="Static\SFX\Noise\NoiseHA.wav" />
     <None Remove="Static\SFX\Noise\NoiseHORUS.wav" />
@@ -25,7 +33,31 @@
     <Content Include="Static\SFX\GateClose\GateCloseGMS.wav">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Static\SFX\GateClose\GateCloseHA.wav">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Static\SFX\GateClose\GateCloseHORUS.wav">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Static\SFX\GateClose\GateCloseIPSN.wav">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Static\SFX\GateClose\GateCloseSSC.wav">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="Static\SFX\GateOpen\GateOpenGMS.wav">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Static\SFX\GateOpen\GateOpenHA.wav">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Static\SFX\GateOpen\GateOpenHORUS.wav">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Static\SFX\GateOpen\GateOpenIPSN.wav">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Static\SFX\GateOpen\GateOpenSSC.wav">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Static\SFX\Noise\NoiseGMS.wav">
