--- a/TAC_COM/TAC_COM.csproj
+++ b/TAC_COM/TAC_COM.csproj
@@ -10,6 +10,7 @@
   </PropertyGroup>
 
 	<ItemGroup>
+    <None Remove="Static\Icons\enabled-light.ico" />
     <None Remove="Static\Icons\enabled.ico" />
     <None Remove="Static\Icons\Icon-GMS.ico" />
     <None Remove="Static\Icons\Icon-HA.ico" />
@@ -17,6 +18,7 @@
     <None Remove="Static\Icons\Icon-IPSN.ico" />
     <None Remove="Static\Icons\icon.png" />
     <None Remove="Static\Icons\live.ico" />
+    <None Remove="Static\Icons\standby-light.ico" />
     <None Remove="Static\Icons\standby.ico" />
     <None Remove="Static\SFX\GateClose\GateCloseGMS.wav" />
     <None Remove="Static\SFX\GateClose\GateCloseHA.wav" />
@@ -44,6 +46,9 @@
 	</ItemGroup>
 
   <ItemGroup>
+    <Content Include="Static\Icons\enabled-light.ico">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="Static\Icons\enabled.ico">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
@@ -63,6 +68,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Static\Icons\live.ico">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Static\Icons\standby-light.ico">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Static\Icons\standby.ico">
