--- a/TAC_COM/TAC_COM.csproj
+++ b/TAC_COM/TAC_COM.csproj
@@ -7,6 +7,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <UseWPF>true</UseWPF>
     <ApplicationIcon>Static\Icons\Icon-GMS.ico</ApplicationIcon>
+	<FileVersion>1.1.0</FileVersion>
   </PropertyGroup>
 
 	<ItemGroup>
