--- a/TAC_COM/TAC_COM.csproj
+++ b/TAC_COM/TAC_COM.csproj
@@ -9,6 +9,7 @@
     <ApplicationIcon>Static\Icons\Icon-GMS.ico</ApplicationIcon>
 	<Version>1.1.0</Version>
 	<FileVersion>1.1.0</FileVersion>
+	<PlatformTarget>x64</PlatformTarget>
   </PropertyGroup>
 
 	<ItemGroup>
@@ -135,6 +136,8 @@
     <PackageReference Include="WebRtcVadSharp" Version="1.3.2" />
   </ItemGroup>
 
+  <Import Project="Build/WebRtcVadSharp.targets" />
+	
   <ItemGroup>
     <Resource Include="Themes\ThemeGMS.xaml" />
     <Resource Include="Themes\ThemeHA.xaml" />
