Update solution to explicitly target x64

--- a/TAC_COM/TAC_COM.csproj
+++ b/TAC_COM/TAC_COM.csproj
@@ -10,6 +10,8 @@
 	<Version>1.1.0</Version>
 	<FileVersion>1.1.0</FileVersion>
 	<PlatformTarget>x64</PlatformTarget>
+	<Platforms>x64</Platforms>
+	<RuntimeIdentifier>win-x64</RuntimeIdentifier>
   </PropertyGroup>
 
 	<ItemGroup>
