--- a/TAC_COM/TAC_COM.csproj
+++ b/TAC_COM/TAC_COM.csproj
@@ -136,6 +136,7 @@
     <PackageReference Include="NWaves" Version="0.9.6" />
     <PackageReference Include="System.Drawing.Common" Version="9.0.2" />
     <PackageReference Include="WebRtcVadSharp" Version="1.3.2" />
+    <PackageReference Include="YellowDogMan.RRNoise.NET" Version="0.1.6" />
   </ItemGroup>
 
   <Import Project="Build/WebRtcVadSharp.targets" />
