--- a/TAC_COM/TAC_COM.csproj
+++ b/TAC_COM/TAC_COM.csproj
@@ -12,8 +12,11 @@
 	<PlatformTarget>x64</PlatformTarget>
 	<Platforms>x64</Platforms>
 	<RuntimeIdentifier>win-x64</RuntimeIdentifier>
-	<DebugType>none</DebugType>
 	<DebugSymbols>false</DebugSymbols>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
+    <DebugType>none</DebugType>
   </PropertyGroup>
 
   <ItemGroup>
